tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00085.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.c-testsuite/case_00085.c" (c, x86_64-unknown-linux-gnu)
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    scope {
        %28 = const 0 : s32i
        %29 = cast(int_to_bool) %28 : bool
        if %29 {
            %30 = const 1 : s32i
            store %30, %0
            %31 = load %0 : s32i
            return %31
        }
        yield
    }
    scope {
        %24 = const 0 : s32i
        %25 = cast(int_to_bool) %24 : bool
        if %25 {
            %26 = const 1 : s32i
            store %26, %0
            %27 = load %0 : s32i
            return %27
        }
        yield
    }
    scope {
        %20 = const 0 : s32i
        %21 = cast(int_to_bool) %20 : bool
        if %21 {
            %22 = const 1 : s32i
            store %22, %0
            %23 = load %0 : s32i
            return %23
        }
        yield
    }
    scope {
        %16 = const 0 : s32i
        %17 = cast(int_to_bool) %16 : bool
        if %17 {
            %18 = const 1 : s32i
            store %18, %0
            %19 = load %0 : s32i
            return %19
        }
        yield
    }
    scope {
        %12 = const 0 : s32i
        %13 = cast(int_to_bool) %12 : bool
        if %13 {
            %14 = const 1 : s32i
            store %14, %0
            %15 = load %0 : s32i
            return %15
        }
        yield
    }
    scope {
        %8 = const 0 : s32i
        %9 = cast(int_to_bool) %8 : bool
        if %9 {
            %10 = const 1 : s32i
            store %10, %0
            %11 = load %0 : s32i
            return %11
        }
        yield
    }
    scope {
        %4 = const 0 : s32i
        %5 = cast(int_to_bool) %4 : bool
        if %5 {
            %6 = const 1 : s32i
            store %6, %0
            %7 = load %0 : s32i
            return %7
        }
        yield
    }
    %2 = const 0 : s32i
    store %2, %0
    %3 = load %0 : s32i
    return %3
}
