tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00091.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.c-testsuite/case_00091.c" (c, x86_64-unknown-linux-gnu)
global a : rec_S[1] = [{1, [2, 3]}] [external, default, align 4, dso_local]

fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    scope {
        %26 = const 0 : s64i
        %27 = get_global @a : rec_S[1]*
        %28 = get_element %27[%26] : rec_S*
        %29 = get_member %28[0] "v" : s32i*
        %30 = load %29 : s32i, align 4
        %31 = const 1 : s32i
        %32 = cmp ne %30, %31 : bool
        if %32 {
            %33 = const 1 : s32i
            store %33, %0
            %34 = load %0 : s32i
            return %34
        }
        yield
    }
    scope {
        %15 = const 0 : s64i
        %16 = const 0 : s64i
        %17 = get_global @a : rec_S[1]*
        %18 = get_element %17[%16] : rec_S*
        %19 = get_member %18[1] "sub" : s32i[2]*
        %20 = get_element %19[%15] : s32i*
        %21 = load %20 : s32i, align 4
        %22 = const 2 : s32i
        %23 = cmp ne %21, %22 : bool
        if %23 {
            %24 = const 2 : s32i
            store %24, %0
            %25 = load %0 : s32i
            return %25
        }
        yield
    }
    scope {
        %4 = const 1 : s64i
        %5 = const 0 : s64i
        %6 = get_global @a : rec_S[1]*
        %7 = get_element %6[%5] : rec_S*
        %8 = get_member %7[1] "sub" : s32i[2]*
        %9 = get_element %8[%4] : s32i*
        %10 = load %9 : s32i, align 4
        %11 = const 3 : s32i
        %12 = cmp ne %10, %11 : bool
        if %12 {
            %13 = const 3 : s32i
            store %13, %0
            %14 = load %0 : s32i
            return %14
        }
        yield
    }
    %2 = const 0 : s32i
    store %2, %0
    %3 = load %0 : s32i
    return %3
}
