tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00092.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.c-testsuite/case_00092.c" (c, x86_64-unknown-linux-gnu)
global a : s32i[4] = [5, 0, 2, 3] [external, default, align 16, dso_local]

fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    scope {
        %36 = const 16 : u64i
        %37 = const 4 : u64i
        %38 = const 4 : u64i
        %39 = mul %37, %38 : u64i
        %40 = cmp ne %36, %39 : bool
        if %40 {
            %41 = const 1 : s32i
            store %41, %0
            %42 = load %0 : s32i
            return %42
        }
        yield
    }
    scope {
        %28 = const 0 : s64i
        %29 = get_global @a : s32i[4]*
        %30 = get_element %29[%28] : s32i*
        %31 = load %30 : s32i, align 16
        %32 = const 5 : s32i
        %33 = cmp ne %31, %32 : bool
        if %33 {
            %34 = const 2 : s32i
            store %34, %0
            %35 = load %0 : s32i
            return %35
        }
        yield
    }
    scope {
        %20 = const 1 : s64i
        %21 = get_global @a : s32i[4]*
        %22 = get_element %21[%20] : s32i*
        %23 = load %22 : s32i, align 4
        %24 = const 0 : s32i
        %25 = cmp ne %23, %24 : bool
        if %25 {
            %26 = const 3 : s32i
            store %26, %0
            %27 = load %0 : s32i
            return %27
        }
        yield
    }
    scope {
        %12 = const 2 : s64i
        %13 = get_global @a : s32i[4]*
        %14 = get_element %13[%12] : s32i*
        %15 = load %14 : s32i, align 8
        %16 = const 2 : s32i
        %17 = cmp ne %15, %16 : bool
        if %17 {
            %18 = const 4 : s32i
            store %18, %0
            %19 = load %0 : s32i
            return %19
        }
        yield
    }
    scope {
        %4 = const 3 : s64i
        %5 = get_global @a : s32i[4]*
        %6 = get_element %5[%4] : s32i*
        %7 = load %6 : s32i, align 4
        %8 = const 3 : s32i
        %9 = cmp ne %7, %8 : bool
        if %9 {
            %10 = const 5 : s32i
            store %10, %0
            %11 = load %0 : s32i
            return %11
        }
        yield
    }
    %2 = const 0 : s32i
    store %2, %0
    %3 = load %0 : s32i
    return %3
}
