tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00095.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.c-testsuite/case_00095.c" (c, x86_64-unknown-linux-gnu)
global x : s32i = 3 [external, default, align 4, dso_local]

fn foo() -> void* [external, c, no_inline, dso_local, nothrow] {
    %13 = alloca void*, "__retval", align 8
    %14 = get_global @main : (() -> s32i)*
    %15 = cast(bitcast) %14 : ((...) -> s32i)*
    %16 = cast(bitcast) %15 : void*
    store %16, %13
    %17 = load %13 : void*
    return %17
}
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    scope {
        %7 = get_global @x : s32i*
        %8 = load %7 : s32i, align 4
        %9 = const 3 : s32i
        %10 = cmp ne %8, %9 : bool
        if %10 {
            %11 = const 0 : s32i
            store %11, %0
            %12 = load %0 : s32i
            return %12
        }
        yield
    }
    %2 = const 0 : s32i
    %3 = get_global @x : s32i*
    store %2, %3, align 4
    %4 = get_global @x : s32i*
    %5 = load %4 : s32i, align 4
    store %5, %0
    %6 = load %0 : s32i
    return %6
}
